<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_ilanduzenle"
            android:layout_width="200dp"
            android:layout_height="188dp"
            android:layout_marginTop="70dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_image_24"
            app:layout_constraintBottom_toTopOf="@+id/txt_baslik_duzenle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txt_baslik_duzenle"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/kenarlik"
            android:drawableStart="@drawable/baslik"
            android:hint="@string/ilanbasliginiduzenle"
            app:layout_constraintBottom_toTopOf="@+id/txt_aciklama_duzenle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_ilanduzenle" />

        <EditText
            android:id="@+id/txt_aciklama_duzenle"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/kenarlik"
            android:drawableStart="@drawable/detay"
            android:hint="@string/aciklamaduzenle"
            app:layout_constraintBottom_toTopOf="@+id/txt_isim_duzenle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_baslik_duzenle" />


        <EditText
            android:id="@+id/txt_isim_duzenle"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/kenarlik"
            android:drawableStart="@drawable/uzgunsurat"
            android:hint="@string/hayvanismiduzenle"
            app:layout_constraintBottom_toTopOf="@+id/txt_yas_duzenle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_aciklama_duzenle" />


        <EditText
            android:id="@+id/txt_yas_duzenle"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/kenarlik"
            android:drawableStart="@drawable/yas"
            android:ems="10"
            android:hint="@string/yasdegis"
            app:layout_constraintBottom_toTopOf="@+id/txt_telefon_duzenle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_isim_duzenle" />


        <EditText
            android:id="@+id/txt_telefon_duzenle"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/kenarlik"
            android:drawableStart="@drawable/telefon"
            android:hint="@string/telnodegis"
            app:layout_constraintBottom_toTopOf="@+id/txt_adres_duzenle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_yas_duzenle" />

        <EditText
            android:id="@+id/txt_adres_duzenle"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="172dp"
            android:background="@drawable/kenarlik"
            android:drawableStart="@drawable/adres"
            android:hint="@string/konumdegis"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_telefon_duzenle" />

        <Button
            android:id="@+id/btn_ilanduzenle"
            android:layout_width="162dp"
            android:layout_height="50dp"
            android:layout_marginStart="165dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="194dp"
            android:background="@drawable/butonkenarlik"
            android:text="@string/kaydet"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:iconPadding="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_adres_duzenle" />

        <ImageButton
            android:id="@+id/imageBtn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_gelenilanno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isaretle"
            android:visibility="invisible"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>